--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
       <h1>전등배치 원클릭 앱</h1>
       <p>
-        KS A 3011 조도 기준 + 자동 수량 계산 + 실별 일괄 계산 + AutoLISP(qqq/qqqall)
-        코드 생성
+        KS A 3011 조도 기준 + 자동 수량 계산 + 실별 일괄 계산 + CAD 자동 처리(DXF/DWG 업로드)
+        + AutoLISP(qqq/qqqall) 코드 생성
       </p>
     </header>
 
@@ -142,7 +142,93 @@
       </section>
 
       <section class="card">
-        <h2>KS A 3011 조도 등급표 (요약)</h2>
+        <h2>⑤ CAD 자동 처리 (DXF/DWG → 방 인식 → 계산 → 결과 DXF)</h2>
+        <p class="hint">
+          도면을 업로드하면 닫힌 폴리라인을 방으로 자동 인식하고, 조도 계산 후 배치 점을 생성해
+          결과 DXF를 내려받을 수 있습니다.
+        </p>
+
+        <div class="grid two">
+          <label>
+            CAD 파일 업로드 (.dxf, .dwg)
+            <input id="cadFile" type="file" accept=".dxf,.dwg" />
+          </label>
+
+          <label>
+            도면 단위
+            <select id="cadUnit">
+              <option value="mm" selected>mm</option>
+              <option value="cm">cm</option>
+              <option value="m">m</option>
+            </select>
+          </label>
+
+          <label>
+            최소 방 면적 (㎡)
+            <input id="cadMinArea" type="number" value="3" min="0" step="0.1" />
+          </label>
+
+          <label>
+            최대 방 면적 (㎡)
+            <input id="cadMaxArea" type="number" value="5000" min="1" step="1" />
+          </label>
+
+          <label>
+            배치 그리드 (mm)
+            <input id="cadGrid" type="number" value="300" min="10" step="10" />
+          </label>
+
+          <label>
+            출력 레이어명
+            <input id="cadOutputLayer" type="text" value="LIGHT_AUTO" />
+          </label>
+
+          <label>
+            심볼 반지름 (mm)
+            <input id="cadSymbolRadius" type="number" value="150" min="1" step="1" />
+          </label>
+
+          <label>
+            텍스트 오프셋 (mm)
+            <input id="cadTextOffset" type="number" value="300" min="0" step="10" />
+          </label>
+        </div>
+
+        <div class="actions">
+          <button id="cadAnalyzeBtn">방 자동 인식</button>
+          <button id="cadLayoutBtn">자동 배치 계산</button>
+          <button id="cadExportBtn" class="ghost">결과 DXF 다운로드</button>
+        </div>
+
+        <pre id="cadStatus" class="output"></pre>
+
+        <div class="table-wrap">
+          <table id="cadRoomTable">
+            <thead>
+              <tr>
+                <th>방</th>
+                <th>레이어</th>
+                <th>면적(㎡)</th>
+                <th>RI</th>
+                <th>U</th>
+                <th>추천 수량</th>
+                <th>배치 수량</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+            <tfoot>
+              <tr>
+                <th colspan="5">총합</th>
+                <th id="cadRecommendedTotal">0</th>
+                <th id="cadPlacedTotal">0</th>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+      </section>
+
+      <section class="card">
+        <h2>⑥ KS A 3011 조도 등급표 (요약)</h2>
         <ul id="ksSummary"></ul>
         <p class="disclaimer">
           참고: 본 앱의 KS 값은 제공해주신 표(조도 등급 A~K) 기반 요약값입니다.
@@ -155,6 +241,7 @@
       <p>Built for one-click lighting layout workflow.</p>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/@mlightcad/libdxfrw-web@0.1.0/dist/libdxfrw.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
