chore: update page title for CAD workflow

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>전등배치 원클릭 앱 (KS A 3011 + AutoLISP)</title>
+    <title>전등배치 원클릭 앱 (KS A 3011 + CAD 자동처리 + AutoLISP)</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
